<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    tools:context=".GameOverFragment">

    <ImageButton
        android:id="@+id/retryButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/retry"
        android:scaleType="fitXY"
        android:src="@drawable/retry_button"
        app:layout_constraintStart_toEndOf="@id/settingsButton"
        app:layout_constraintTop_toTopOf="@id/settingsButton" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/settings"
        android:scaleType="fitXY"

        android:src="@drawable/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSpent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        android:src="@drawable/back_button"
        app:layout_constraintEnd_toStartOf="@id/settingsButton"
        app:layout_constraintTop_toTopOf="@id/settingsButton" />

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/game_over"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/gameOverMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/placeholder"

        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

    <TextView
        android:id="@+id/timeSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="@string/placeholder"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverMessage" />

    <ImageView
        android:id="@+id/highscoreStar"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="-65dp"
        android:contentDescription="@string/new_high_score"
        android:src="@drawable/new_high_score"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/timeSpent"
        app:layout_constraintEnd_toEndOf="@id/timeSpent" />


</androidx.constraintlayout.widget.ConstraintLayout>