<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planks_background"
    tools:context=".Fragments.MainMenuFragment">


    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/start_game"
        android:scaleType="fitXY"
        android:src="@drawable/play_button"
        app:layout_constraintBottom_toBottomOf="@+id/logoImage"
        app:layout_constraintStart_toEndOf="@+id/logoImage"
        app:layout_constraintTop_toTopOf="@+id/logoImage"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/leave"
        android:scaleType="fitXY"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/settings"
        android:scaleType="fitXY"
        android:src="@drawable/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="485dp"
        android:layout_height="311dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:src="@drawable/logo_expanded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:contentDescription="@string/plant_simulator_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
